Fix header magic on mobile when the menu opens

--- a/_sass/modules/_navigation.scss
+++ b/_sass/modules/_navigation.scss
@@ -16,6 +16,7 @@
 .navigation {
   padding: 2em;
   height: $base-line-height;
+  box-sizing: content-box;
 
   .small_logo {
     @include animate(opacity);
